--- a/src/index.less
+++ b/src/index.less
@@ -1,13 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.container {
+  min-width: 950px;
+  height: 100%;
+}
+.container-title {
+  height: 64px;
+  font-weight: 700;
+  font-size: 22px;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 2em;
+  padding: 6px;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -28,7 +35,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
+  .logo-rotate {
     animation: logo-spin infinite 20s linear;
   }
 }
