--- a/src/index.less
+++ b/src/index.less
@@ -11,7 +11,6 @@
   font-weight: 700;
   font-size: 22px;
 }
-
 .logo {
   height: 2em;
   padding: 6px;
@@ -37,6 +36,16 @@
 @media (prefers-reduced-motion: no-preference) {
   .logo-rotate {
     animation: logo-spin infinite 20s linear;
+  }
+}
+.header-right {
+  font-size: 20px;
+  margin-right: 30px;
+  > * {
+    margin: 0px 10px;
+  }
+  .header-right-user {
+    height: 22px;
   }
 }
 
