--- a/src/index.less
+++ b/src/index.less
@@ -2,15 +2,7 @@
   width: 100%;
   height: 100%;
 }
-.container {
-  min-width: 950px;
-  height: 100%;
-}
-.container-title {
-  height: 64px;
-  font-weight: 700;
-  font-size: 22px;
-}
+
 .logo {
   height: 2em;
   padding: 6px;
@@ -19,9 +11,6 @@
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
@@ -38,21 +27,11 @@
     animation: logo-spin infinite 20s linear;
   }
 }
-.header-right {
-  font-size: 20px;
-  margin-right: 30px;
-  > * {
-    margin: 0px 10px;
-  }
-  .header-right-user {
-    height: 22px;
-  }
-}
 
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
+.c {
   color: #888;
 }
