添加字体和图标

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -108,3 +108,25 @@
 .cursor-move {
   cursor: move; //移动
 }
+
+// 使用钉钉字体
+.font-family-dingding {
+  font-family: '钉钉进步体 Regular';
+}
+
+// 字体颜色
+.color-text-primary {
+  color: #1890ff;
+}
+.color-text-success {
+  color: #52c41a;
+}
+.color-text-error {
+  color: #f5222d;
+}
+.color-text-body {
+  color: #2f2f33;
+}
+.color-text-active {
+  color: #0162ff;
+}
