--- a/src/views/login/loginForm/index.less
+++ b/src/views/login/loginForm/index.less
@@ -138,8 +138,6 @@ input {
   background: #ff416c;
   background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
   background: linear-gradient(to right, #ff4b2b, #ff416c);
-  // background: -webkit-linear-gradient(to right, #ff4b2b, #ff416c);
-  // background: linear-gradient(to right, #ff4b2b, #ff416c);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -157,6 +155,7 @@ input {
 }
 
 .overlay-panel {
+  font-family: '钉钉进步体 Regular';
   position: absolute;
   display: flex;
   align-items: center;
