--- a/src/components/MyLayout/index.less
+++ b/src/components/MyLayout/index.less
@@ -14,12 +14,23 @@
 }
 
 .header-right {
-  font-size: 20px;
+  // font-size: 20px;
   margin-right: 30px;
   > * {
-    margin: 0px 10px;
+    margin: 0px 8px;
+  }
+  > :last-child {
+    margin: 0px;
   }
   .header-right-user {
-    height: 22px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
   }
+}
+.popover-title {
+  border-bottom: 1px solid #e5e5e5;
+}
+.popover-content {
+  // width: 180px;
 }
