--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.eot?t=1697611008292'); /* IE9 */
-  src: url('iconfont.eot?t=1697611008292#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1697611008292') format('woff2'),
-       url('iconfont.woff?t=1697611008292') format('woff'),
-       url('iconfont.ttf?t=1697611008292') format('truetype'),
-       url('iconfont.svg?t=1697611008292#iconfont') format('svg');
+  src: url('iconfont.eot?t=1697620650724'); /* IE9 */
+  src: url('iconfont.eot?t=1697620650724#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1697620650724') format('woff2'),
+       url('iconfont.woff?t=1697620650724') format('woff'),
+       url('iconfont.ttf?t=1697620650724') format('truetype'),
+       url('iconfont.svg?t=1697620650724#iconfont') format('svg');
 }
 
 .iconfont {
@@ -16,12 +16,172 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.mr-circular2:before {
-  content: "\e6bf";
+.mr-full:before {
+  content: "\e60e";
+}
+
+.mr-un-full:before {
+  content: "\e611";
+}
+
+.mr-home-7:before {
+  content: "\e6b8";
+}
+
+.mr-home-6:before {
+  content: "\e6bb";
+}
+
+.mr-menu-4:before {
+  content: "\e755";
+}
+
+.mr-fork-1:before {
+  content: "\e628";
+}
+
+.mr-photo-1:before {
+  content: "\e6b4";
+}
+
+.mr-likes-1:before {
+  content: "\e61a";
+}
+
+.mr-right-1:before {
+  content: "\e61d";
+}
+
+.mr-local-1:before {
+  content: "\e621";
+}
+
+.mr-menu-3:before {
+  content: "\e62b";
+}
+
+.mr-leave-3:before {
+  content: "\e64b";
+}
+
+.mr-clear-1:before {
+  content: "\e610";
+}
+
+.mr-del-1:before {
+  content: "\e625";
+}
+
+.mr-home2:before {
+  content: "\e61b";
+}
+
+.mr-change-1:before {
+  content: "\e606";
+}
+
+.mr-sound-2:before {
+  content: "\e63e";
+}
+
+.mr-setting-3:before {
+  content: "\e6b3";
+}
+
+.mr-home-2:before {
+  content: "\e64e";
+}
+
+.mr-home-1:before {
+  content: "\e76b";
+}
+
+.mr-home-3:before {
+  content: "\e63b";
+}
+
+.mr-home-4:before {
+  content: "\e63c";
+}
+
+.mr-user:before {
+  content: "\e676";
+}
+
+.mr-settig-2:before {
+  content: "\eb40";
+}
+
+.mr-home3:before {
+  content: "\e6f5";
+}
+
+.mr-leave-2:before {
+  content: "\e66e";
+}
+
+.mr-setting-1:before {
+  content: "\e75e";
+}
+
+.mr-menu-2:before {
+  content: "\e840";
+}
+
+.mr-home4:before {
+  content: "\e7d0";
+}
+
+.mr-leave-1:before {
+  content: "\e60d";
+}
+
+.mr-search-1:before {
+  content: "\e608";
+}
+
+.mr-sound-1:before {
+  content: "\e60c";
+}
+
+.mr-home5:before {
+  content: "\e6bc";
+}
+
+.mr-translate-2:before {
+  content: "\e65f";
+}
+
+.mr-more-1:before {
+  content: "\e645";
+}
+
+.mr-translate-1:before {
+  content: "\e6fb";
+}
+
+.mr-menu-1:before {
+  content: "\e83b";
+}
+
+.mr-notify:before {
+  content: "\e622";
 }
 
 .mr-circular:before {
-  content: "\e627";
+  content: "\e6bf";
+}
+
+.mr-evening-moon1:before {
+  content: "\e716";
+}
+
+.mr-evening-moon2:before {
+  content: "\e714";
+}
+
+.mr-day-moon:before {
+  content: "\e715";
 }
 
 .mr-square:before {
