--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -1,36 +1,38 @@
-.container {
-  min-width: 950px;
-  height: 100%;
-}
-.container-title {
-  height: 64px;
-  font-weight: 700;
-  font-size: 22px;
-}
-
-.header-left-title {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.header-right {
-  // font-size: 20px;
-  margin-right: 30px;
-  > * {
-    margin: 0px 8px;
+.layout {
+  // 头部
+  .headerStyle {
+    z-index: 1;
+    position: sticky;
+    top: 0;
+    height: 60px;
+    background: rgba(255, 255, 255, 0.7);
+    background-clip: 'padding-box';
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
+      0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
+    backdrop-filter: blur(24px);
   }
-  > :last-child {
-    margin: 0px;
+  // 侧边菜单
+  .siderStyle {
+    overflow: auto;
+    position: fixed;
+    left: 0;
+    height: calc(100% - 90px);
+    padding: 12px 10px;
+    margin-top: 30px;
+    background-color: #fff;
+    border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
   }
-  .header-right-user {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
+  // 内容区
+  .contentStyle {
+    background-color: #fff;
+    overflow: auto;
+    padding: 0 50px;
+    margin-top: 30px;
   }
-}
-.popover-title {
-  border-bottom: 1px solid #e5e5e5;
-}
-.popover-content {
-  // width: 180px;
+  // 底部
+  .footerStyle {
+    text-align: center;
+    height: 65px;
+    background-color: #fff;
+  }
 }
