--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.eot?t=1697620650724'); /* IE9 */
-  src: url('iconfont.eot?t=1697620650724#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1697620650724') format('woff2'),
-       url('iconfont.woff?t=1697620650724') format('woff'),
-       url('iconfont.ttf?t=1697620650724') format('truetype'),
-       url('iconfont.svg?t=1697620650724#iconfont') format('svg');
+  src: url('iconfont.eot?t=1698919455463'); /* IE9 */
+  src: url('iconfont.eot?t=1698919455463#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1698919455463') format('woff2'),
+       url('iconfont.woff?t=1698919455463') format('woff'),
+       url('iconfont.ttf?t=1698919455463') format('truetype'),
+       url('iconfont.svg?t=1698919455463#iconfont') format('svg');
 }
 
 .iconfont {
@@ -14,6 +14,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-gitee:before {
+  content: "\e60f";
 }
 
 .mr-full:before {
