--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -1,4 +1,7 @@
 .login-container {
   width: 100vw;
   height: 100vh;
+  background-image: url(../../assets/images/login-bc.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
