--- a/src/layouts/auth/loginForm/index.scss
+++ b/src/layouts/auth/loginForm/index.scss
@@ -1,6 +1,20 @@
+body {
+  background: #f6f5f7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+}
+
+// 默认去掉h1边距
 h1 {
   font-weight: bold;
   margin: 0;
+}
+h2 {
+  text-align: center;
 }
 p {
   font-size: 14px;
@@ -29,7 +43,6 @@ button {
   letter-spacing: 1px;
   text-transform: uppercase;
   transition: transform 80ms ease-in;
-  margin-bottom: 80px;
 }
 button:active {
   transform: scale(0.95);
@@ -50,53 +63,46 @@ form {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 0 50px;
   height: 100%;
   text-align: center;
-  padding: 0 10vw;
-  min-width: 300px;
 }
 
 input {
   background-color: #eee;
   border: none;
   padding: 12px 15px;
-  margin: 10px;
+  margin: 8px 0;
   width: 100%;
-  max-width: 600px;
 }
+
+// 登录组件
 .form-box {
-  .form-box-title {
-    font-size: 20px;
-    font-weight: 700;
-    height: 50px;
-    line-height: 20px;
-    text-align: center;
-  }
   .form-container-box {
     background-color: #fff;
+    border-radius: 10px;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     position: relative;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-
+    width: 768px;
+    max-width: 100%;
+    min-height: 480px;
     .form-container {
       position: absolute;
       top: 0;
       height: 100%;
-      width: 768px;
       transition: all 0.6s ease-in-out;
     }
     // 登陆
     .sign-in-container {
       right: 0;
-      // left: 0;
       width: 50%;
       z-index: 2;
     }
     // 注册
     .sign-up-container {
-      left: 50%;
-      // left: -50%;
+      right: 0;
       width: 50%;
       opacity: 0;
       z-index: 1;
@@ -104,9 +110,8 @@ input {
     .overlay-container {
       position: absolute;
       top: 0;
-      left: 0;
-      // left: 50%;
-      width: 40%;
+      right: 50%;
+      width: 50%;
       height: 100%;
       overflow: hidden;
       transition: transform 0.6s ease-in-out;
@@ -124,6 +129,9 @@ input {
   z-index: 5;
   animation: show 0.6s;
 }
+.form-container-box.right-panel-active .overlay-container {
+  transform: translateX(100%);
+}
 @keyframes show {
   0%,
   49.99% {
@@ -135,9 +143,6 @@ input {
     opacity: 1;
     z-index: 5;
   }
-}
-.form-container-box.right-panel-active .overlay-container {
-  transform: translateX(150%);
 }
 
 .overlay {
@@ -177,19 +182,20 @@ input {
 
 .overlay-left {
   transform: translateX(-20%);
-  background: url('../../../assets/images/auth-bc-set.png');
+  // background: url('../../../assets/images/auth-bc-set.png');
   background-repeat: no-repeat;
-  &::before {
-    content: '';
-    width: 420px;
-    height: 420px;
-    position: relative;
-    top: -40px;
-    left: 30px;
-    background-image: url('../../../assets/images/auth-magic-1.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+  // position: relative;
+  // &::before {
+  //   content: '';
+  //   width: 100px;
+  //   height: 22px;
+  //   position: absolute;
+  //   top: 10px;
+  //   right: 10px;
+  //   background-image: url('../../../assets/images/mrk7.png');
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  // }
 }
 
 .form-container-box.right-panel-active .overlay-left {
@@ -199,18 +205,19 @@ input {
 .overlay-right {
   right: 0;
   transform: translateX(0);
-  background: url('../../../assets/images/auth-bc-login.png');
+  // background: url('../../../assets/images/auth-bc-login.png');
   background-repeat: no-repeat;
-  &::before {
-    content: '';
-    width: 420px;
-    height: 285px;
-    position: relative;
-    bottom: -15px;
-    left: 30px;
-    background-image: url('../../../assets/images/auth-report.png');
-    background-repeat: no-repeat;
-  }
+  // &::before {
+  //   content: '';
+  //   width: 100px;
+  //   height: 22px;
+  //   position: absolute;
+  //   top: 10px;
+  //   left: 10px;
+  //   background-image: url('../../../assets/images/mrk7.png');
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+  // }
 }
 
 .form-container-box.right-panel-active .overlay-right {
