--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,6 +13,11 @@
   display: flex;
   align-items: center;
 }
+.flx-justify-around {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
 /* 清除浮动 */
 .clearfix::after {
@@ -140,4 +145,9 @@
   background: linear-gradient(to right, #0040f8, #03ffd0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+// 居中
+.text-center {
+  text-align: center;
 }
