--- a/src/static/iconfont/iconfont.css
+++ b/src/static/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4291850 */
-  src: url('iconfont.eot?t=1698919455463'); /* IE9 */
-  src: url('iconfont.eot?t=1698919455463#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1698919455463') format('woff2'),
-       url('iconfont.woff?t=1698919455463') format('woff'),
-       url('iconfont.ttf?t=1698919455463') format('truetype'),
-       url('iconfont.svg?t=1698919455463#iconfont') format('svg');
+  src: url('iconfont.eot?t=1699416841700'); /* IE9 */
+  src: url('iconfont.eot?t=1699416841700#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1699416841700') format('woff2'),
+       url('iconfont.woff?t=1699416841700') format('woff'),
+       url('iconfont.ttf?t=1699416841700') format('truetype'),
+       url('iconfont.svg?t=1699416841700#iconfont') format('svg');
 }
 
 .iconfont {
@@ -14,6 +14,46 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.mr-denglu:before {
+  content: "\e609";
+}
+
+.mr-duoyuyan:before {
+  content: "\e654";
+}
+
+.mr-youxiang:before {
+  content: "\e908";
+}
+
+.mr-github:before {
+  content: "\e82b";
+}
+
+.mr-lianxiwomen:before {
+  content: "\e604";
+}
+
+.mr-qq:before {
+  content: "\e612";
+}
+
+.mr-weixin:before {
+  content: "\e8bb";
+}
+
+.mr-qiehuanyuyan:before {
+  content: "\e769";
+}
+
+.mr-a-yuyanzhongwen:before {
+  content: "\e640";
+}
+
+.mr-a-yuyanyingwen:before {
+  content: "\e642";
 }
 
 .mr-gitee:before {
