--- a/src/layouts/auth/loginForm/index.scss
+++ b/src/layouts/auth/loginForm/index.scss
@@ -24,8 +24,8 @@ a {
 }
 button {
   border-radius: 20px;
-  border: 1px solid #0038fa;
-  background: rgba($color: #0038fa, $alpha: 0.9);
+  border: 1px solid #325cf2;
+  background: rgba($color: #325cf2, $alpha: 0.9);
   color: #ffffff;
   font-size: 12px;
   font-weight: bold;
@@ -136,9 +136,9 @@ input {
 }
 
 .overlay {
-  background: #0038fa;
-  background: -webkit-linear-gradient(to right, #03ffd0, #0040f8);
-  background: linear-gradient(to right, #03ffd0, #0040f8);
+  background: #029de4;
+  background: -webkit-linear-gradient(to right, #03ffd0, #029de4);
+  background: linear-gradient(to right, #03ffd0, #029de4);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
@@ -227,4 +227,8 @@ input {
   margin: 0 5px;
   height: 40px;
   width: 40px;
+  transition: transform 80ms ease-in;
+  &:active {
+    transform: scale(0.95);
+  }
 }
