--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,4 +1,3 @@
-/* 常用 flex */
 .flx-center {
   display: flex;
   align-items: center;
@@ -134,6 +133,9 @@
 }
 .color-text-active {
   color: #0162ff;
+}
+.color-text-fff {
+  color: #ffffff;
 }
 
 // 首字母变色
