--- a/src/layouts/auth/loginForm/index.scss
+++ b/src/layouts/auth/loginForm/index.scss
@@ -214,21 +214,26 @@ input {
   transform: translateX(20%);
 }
 
-.social-container {
-  margin: 20px 0;
-}
-
-.social-container a {
-  border: 1px solid #dddddd;
-  border-radius: 50%;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 5px;
-  height: 40px;
-  width: 40px;
-  transition: transform 80ms ease-in;
-  &:active {
-    transform: scale(0.95);
+.sign-in-container {
+  .social-container {
+    margin: 20px 0 15px 0;
+    .social {
+      cursor: pointer;
+      border: 1px solid #dddddd;
+      border-radius: 50%;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 5px;
+      height: 40px;
+      width: 40px;
+      transition: transform 80ms ease-in;
+      &:active {
+        transform: scale(0.95);
+      }
+    }
+  }
+  .login-quickly-text {
+    transition: opacity 0.3s ease; /* 添加过渡效果，让变化平滑进行 */
   }
 }
