--- a/src/layouts/auth/loginForm/index.scss
+++ b/src/layouts/auth/loginForm/index.scss
@@ -136,7 +136,7 @@ input {
 }
 
 .overlay {
-  background: #029de4;
+  background: #03e9f4;
   background: -webkit-linear-gradient(to right, #03ffd0, #029de4);
   background: linear-gradient(to right, #03ffd0, #029de4);
   background-repeat: no-repeat;
