登录页面添加全屏和夜间模式

--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -14,7 +14,7 @@
 .login-container {
   width: 100vw;
   height: 100vh;
-  background: #212534;
+  // background: #212534;
   display: flex;
   justify-content: center;
   align-items: center;
