--- a/src/components/mr-sidebar/index.scss
+++ b/src/components/mr-sidebar/index.scss
@@ -1,3 +1,6 @@
 .ant-menu-light.ant-menu-root.ant-menu-inline {
   border-inline-end: 0px solid rgba(5, 5, 5, 0.06) !important;
 }
+.slider-menu-icon {
+  font-size: 20px !important;
+}
