--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -24,8 +24,8 @@
   // 内容区
   .contentStyle {
     overflow: auto;
-    padding: 0 50px;
-    margin-top: 30px;
+    // padding: 0 50px;
+    // margin-top: 30px;
   }
   // 底部
   .footerStyle {
