--- a/src/page/chat/index.scss
+++ b/src/page/chat/index.scss
@@ -1,6 +1,7 @@
 .slider-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 16px;
   cursor: pointer;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 6px 1px rgba(0, 0, 0, 0.1),
@@ -10,6 +11,8 @@
   }
 }
 .slide-groups {
+  height: calc(100% - 90px);
+  overflow: auto;
   padding: 16px;
   > div {
     padding: 12px 5px;
@@ -27,12 +30,15 @@
   }
 }
 .slide-members {
+  height: calc(100% - 90px);
+  overflow: auto;
   padding: 16px;
   > div {
     padding: 12px 5px;
     width: 100%;
     display: flex;
     align-items: center;
+
     .slide-member-icon {
       margin-right: 10px;
       width: 33px;
@@ -146,7 +152,9 @@
   }
 }
 // 修改滚动条
-.chat-history-box::-webkit-scrollbar {
+.chat-history-box::-webkit-scrollbar,
+.slide-members::-webkit-scrollbar,
+.slide-groups::-webkit-scrollbar {
   display: none !important;
 }
 
