--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -5,32 +5,28 @@
     position: sticky;
     top: 0;
     height: 60px;
-    // background: rgba(255, 255, 255, 0.7);
-    background-clip: 'padding-box';
+    width: 100%;
+    background: transparent;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),
       0 1px 6px -1px rgba(0, 0, 0, 0.02), 0 2px 4px 0 rgba(0, 0, 0, 0.02);
-    backdrop-filter: blur(24px);
+    border-bottom: 1px solid rgba(5, 5, 5, 0.06);
+    backdrop-filter: saturate(50%) blur(6px);
+    // cursor: url('../../assets/icons/cursor-1.png'), auto;
   }
-  // 侧边菜单
-  .siderStyle {
-    overflow: auto;
-    position: fixed;
-    left: 0;
-    height: calc(100% - 90px);
-    padding: 12px 10px;
-    margin-top: 30px;
-    border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
-  }
-  // 内容区
-  .contentStyle {
-    overflow: auto;
-    // padding: 0 50px;
-    // margin-top: 30px;
-  }
-  // 底部
-  .footerStyle {
-    text-align: center;
-    height: 65px;
-    color: #e6f4ff;
+  .layout-content {
+    // 侧边菜单
+    .siderStyle {
+      overflow: auto;
+      position: fixed;
+      left: 0;
+      height: calc(100% - 60px);
+      padding-top: 30px;
+      border-inline-end: 1px solid rgba(5, 5, 5, 0.06);
+    }
+    // 内容区
+    .contentStyle {
+      overflow: auto;
+      min-height: calc(100vh - 60px);
+    }
   }
 }
