--- a/src/layouts/fail/index.scss
+++ b/src/layouts/fail/index.scss
@@ -1,14 +1,10 @@
 .fail-container {
   width: 100vw;
   height: 100vh;
-  background-image: url('@/assets/images/404.jpg');
-  background-size: cover;
-  background-position: center;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.fail-button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.fail-result {
+  margin-top: 10%;
 }
