--- a/src/page/home/index.scss
+++ b/src/page/home/index.scss
@@ -1,6 +1,59 @@
 .home-container {
+  width: 100%;
+  height: 100%;
+  padding: 15px 25px;
   font-size: 16px;
-}
-.globeFlat {
-  height: 300px;
+  main {
+    display: flex;
+    justify-content: space-between;
+    > div {
+      height: 400px;
+      width: 49%;
+      padding: 20px;
+      border-radius: 30px;
+      background: #ffffff;
+      &:first-child {
+        padding-top: 56px;
+        padding-bottom: 56px;
+        padding-inline: 64px;
+        color: #ffffff;
+        background: linear-gradient(
+          135deg,
+          rgb(134, 140, 255) 0%,
+          rgb(67, 24, 255) 100%
+        );
+      }
+    }
+  }
+  section {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    > div {
+      width: 32%;
+      height: 200px;
+      background: #ffffff;
+      border-radius: 20px;
+      margin: 10px 0;
+    }
+  }
+  footer {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    > div {
+      height: 300px;
+      background: #ffffff;
+      border-radius: 20px;
+      margin: 10px;
+      &:first-child {
+        width: 45%;
+      }
+      &:not(:nth-child(1)) {
+        flex: 1;
+      }
+    }
+  }
 }
