--- a/src/layouts/admin/index.scss
+++ b/src/layouts/admin/index.scss
@@ -26,6 +26,7 @@
       display: flex;
       flex-direction: column;
       overflow: auto;
+      direction: rtl; //滚动条从右到左
     }
     // 内容区
     .contentStyle {
