首页统计访客

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@
 //定义滑块
 ::-webkit-scrollbar-thumb {
   border-radius: 6px;
-  background: #888;
+  background: #a7a7a7;
 }
 //定义轨道
 ::-webkit-scrollbar-track {
